# Generated by Django 6.0.5 on 2026-05-16 08:33

import django.utils.timezone
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='PromoCode',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('code', models.CharField(max_length=50, unique=True, verbose_name='Промокод')),
                ('discount_type', models.CharField(choices=[('PERCENT', 'Процент (%)'), ('FIXED', 'Фиксированная сумма')], default='PERCENT', max_length=10, verbose_name='Тип скидки')),
                ('discount_value', models.DecimalField(decimal_places=2, max_digits=10, verbose_name='Значение скидки')),
                ('is_active', models.BooleanField(default=True, verbose_name='Активен')),
                ('valid_from', models.DateTimeField(default=django.utils.timezone.now, verbose_name='Действует с')),
                ('valid_until', models.DateTimeField(blank=True, null=True, verbose_name='Действует до')),
            ],
            options={
                'verbose_name': 'Промокод',
                'verbose_name_plural': 'Промокоды',
            },
        ),
        migrations.CreateModel(
            name='SpecialOffer',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('title', models.CharField(max_length=200, verbose_name='Заголовок')),
                ('description', models.TextField(verbose_name='Описание')),
                ('image', models.ImageField(blank=True, null=True, upload_to='promotions/', verbose_name='Изображение')),
                ('button_text', models.CharField(default='Узнать больше', max_length=50, verbose_name='Текст кнопки')),
                ('button_link', models.CharField(default='/booking/', max_length=255, verbose_name='Ссылка кнопки')),
                ('is_active', models.BooleanField(default=True, verbose_name='Активно')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
            ],
            options={
                'verbose_name': 'Спецпредложение',
                'verbose_name_plural': 'Спецпредложения',
            },
        ),
    ]
