@startuml
hide methods
hide stereotypes
skinparam classAttributeIconSize 0

entity "User" as User {
  * id : bigint
  --
  username : string
  email : string
  password : string
}

entity "Profile" as Profile {
  * id : bigint
  --
  user_id : fk
  phone : string
}

entity "Service" as Service {
  * id : bigint
  --
  name : string
  description : text
  duration_minutes : int
  price : decimal
  is_active : bool
  created_at : datetime
}

entity "Master" as Master {
  * id : bigint
  --
  full_name : string
  photo : image
  bio : text
  is_active : bool
  created_at : datetime
}

entity "MasterSchedule" as MasterSchedule {
  * id : bigint
  --
  weekday : int
  work_start : time
  work_end : time
  is_working_day : bool
}

entity "MasterDayOff" as MasterDayOff {
  * id : bigint
  --
  date : date
  reason : string
}

entity "Appointment" as Appointment {
  * id : bigint
  --
  full_name : string
  phone : string
  email : string
  appointment_at : datetime
  comment : text
  promo_code : string
  total_price : decimal
  is_paid : bool
  status : string
  created_at : datetime
}

entity "Review" as Review {
  * id : bigint
  --
  rating : smallint
  text : text
  status : string
  created_at : datetime
  moderated_at : datetime
}

entity "Article" as Article {
  * id : bigint
  --
  title : string
  slug : string
  cover_image : image
  summary : text
  content : text
  is_published : bool
  published_at : datetime
  created_at : datetime
}

entity "PromoCode" as PromoCode {
  * id : bigint
  --
  code : string
  discount_type : string
  discount_value : decimal
  is_active : bool
  valid_from : datetime
  valid_until : datetime
}

entity "SpecialOffer" as SpecialOffer {
  * id : bigint
  --
  title : string
  description : text
  image : image
  button_text : string
  button_link : string
  is_active : bool
  created_at : datetime
}

entity "Master_Service" as MasterService {
  * id : implicit
  --
  master_id : fk
  service_id : fk
}

User ||--o{ Appointment : "creates"
User ||--|| Profile : "has"
Service ||--o{ Appointment : "selected for"
Master ||--o{ Appointment : "assigned to"

Master ||--o{ MasterSchedule : "has"
Master ||--o{ MasterDayOff : "has"

Master ||--o{ Review : "receives"
User ||--o{ Review : "writes"

Master ||--o{ MasterService
Service ||--o{ MasterService

@enduml
